logs/dag_id=Demo/run_id=manual__2022-08-02T093829.120125+0000/task_id=records_saving/attempt=1.log
[2022-08-02 09:38:47,531] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: Demo.records_saving manual__2022-08-02T09:38:29.120125+00:00 [queued]>
[2022-08-02 09:38:47,544] {taskinstance.py:1179} INFO - Dependencies all met for <TaskInstance: Demo.records_saving manual__2022-08-02T09:38:29.120125+00:00 [queued]>
[2022-08-02 09:38:47,544] {taskinstance.py:1376} INFO - 
--------------------------------------------------------------------------------
[2022-08-02 09:38:47,545] {taskinstance.py:1377} INFO - Starting attempt 1 of 1
[2022-08-02 09:38:47,546] {taskinstance.py:1378} INFO - 
--------------------------------------------------------------------------------
[2022-08-02 09:38:47,566] {taskinstance.py:1397} INFO - Executing <Task(PythonOperator): records_saving> on 2022-08-02 09:38:29.120125+00:00
[2022-08-02 09:38:47,571] {standard_task_runner.py:52} INFO - Started process 3391 to run task
[2022-08-02 09:38:47,575] {standard_task_runner.py:79} INFO - Running: ['***', 'tasks', 'run', 'Demo', 'records_saving', 'manual__2022-08-02T09:38:29.120125+00:00', '--job-id', '194', '--raw', '--subdir', 'DAGS_FOLDER/demo.py', '--cfg-path', '/tmp/tmpgb9e396d', '--error-file', '/tmp/tmp6907mne7']
[2022-08-02 09:38:47,575] {standard_task_runner.py:80} INFO - Job 194: Subtask records_saving
[2022-08-02 09:38:47,655] {task_command.py:371} INFO - Running <TaskInstance: Demo.records_saving manual__2022-08-02T09:38:29.120125+00:00 [running]> on host 31353b71d6cb
[2022-08-02 09:38:47,757] {taskinstance.py:1591} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=Demo
AIRFLOW_CTX_TASK_ID=records_saving
AIRFLOW_CTX_EXECUTION_DATE=2022-08-02T09:38:29.120125+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=manual__2022-08-02T09:38:29.120125+00:00
[2022-08-02 09:38:47,773] {base.py:68} INFO - Using connection ID 'postgres_demo' for task execution.
[2022-08-02 09:38:47,778] {dbapi.py:231} INFO - Running statement: sql/queries.sql, parameters: None
[2022-08-02 09:38:47,780] {taskinstance.py:1909} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 171, in execute
    return_value = self.execute_callable()
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/operators/python.py", line 189, in execute_callable
    return self.python_callable(*self.op_args, **self.op_kwargs)
  File "/opt/airflow/dags/demo.py", line 52, in save_records
    postgres_hook.run(sql="sql/queries.sql")
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 211, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 235, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "sql"
LINE 1: sql/queries.sql
        ^

[2022-08-02 09:38:47,798] {taskinstance.py:1420} INFO - Marking task as FAILED. dag_id=Demo, task_id=records_saving, execution_date=20220802T093829, start_date=20220802T093847, end_date=20220802T093847
[2022-08-02 09:38:47,821] {standard_task_runner.py:97} ERROR - Failed to execute job 194 for task records_saving (syntax error at or near "sql"
LINE 1: sql/queries.sql
        ^
; 3391)
[2022-08-02 09:38:47,867] {local_task_job.py:156} INFO - Task exited with return code 1
[2022-08-02 09:38:47,923] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
